Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-52460

media_capture_devices_dispatcher.cpp: missing include file QCoreApplication

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.6.1
    • 5.6.0
    • WebEngine
    • Qt 5.6.0, VS2015, 64bit, Windows 8
    • bae703a3f53126a8baac5ef957662e62ce00344a

    Description

      The fiile qtwebengine\src\core\media_capture_devices_dispatcher.cpp doesn't include QCoreApplication and this generates a compile error.

      Adding #include <QCoreApplication> to the file, fixes the problem.

      Attachments

        For Gerrit Dashboard: QTBUG-52460
        # Subject Branch Project Status CR V

        Activity

          People

            kkohne Kai Köhne
            smarco Marco Servadei
            Votes:
            2 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes