Fix compilation error with missing include

I could not reproduce the issue, nor the CI. Anyhow, it doesn't hurt to
include the header explicitly, instead of relying on indirect includes.

Task-number: QTBUG-52460
Change-Id: I78d04f3af853aa5951cdfc066089f06f71f72988
Reviewed-by: Joerg Bornemann <joerg.bornemann@theqtcompany.com>